src/components/SplashPage/styles/SplashPage.css
/* .promoVideo {
  position: fixed;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  transform: translateX(-50%) translateY(-50%);
  background-size: cover;
} */

.video-container {
  position: relative;
  height: 100vh;
  overflow: hidden;
}

.promoVideo {
  position: absolute;
  top:0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 1px solid #222;
}

.labels {
	text-align: center;
}

.container {
	background-color: #101010;
	height: 100vh;
	width: 100vw;
	text-align: center;
	overflow-y: hidden;
}

.container h3 {
	text-align: center;
	text-transform: uppercase;
	color: white;
	font-family: 'ArialRoundedMTBold';
	font-size: 2.5em;
}

.playPauseButton {
	background: #F04673;
	color: white;
	padding: 5px 15px 5px 15px;
	border-radius: 5px;
	display: inline-block;
	font-family: 'ArialRoundedMTBold';
	font-size: 15px;
	cursor: pointer;
	text-align: center;
  margin-top: 20px;
  animation: btnGlow 12s ease infinite;
}

.playPauseButton:hover {
  opacity: 1;
}

@keyframes btnGlow {
  0% {
    opacity: .2;
  }

  50% {
    opacity: .5;
  }

  100% {
    opacity: .2;
  }
}

.extras {
	width: 30vw;
	margin-left: 35vw;
	text-align: center;
	align-content: center;
	position: absolute;
	bottom: 50px;
	z-index: 12;
}

.link {
	display: block;
}

.promoImage {
	max-width: 100%;
	max-height: 100%;
	display: block;
	margin: auto;
	padding: 0;
}

@media (max-device-width: 767px) {
    .extras {
    	bottom: 8vh;
    }

    .playPauseButton {
    	margin: 0 auto;
    }


	video::-webkit-media-controls {
    	display:none !important;
	}

}

@media only screen 
  and (max-device-width: 767px)
  and (orientation: landscape) {
  	.container {
  		background-image: none;
  		background: #10c0ff;
  	}

  	.extras {
  		width: 50vw;
  		margin-left: 25vw;
  		bottom: 8vh;
  	}

    .video-container {
      margin-top: 0;
    }

  	.playPauseButton {
  		margin: 0 auto;
  	}
}

